--- a/checkout/index.html
+++ b/checkout/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://reddingwebmaster.local/cart/">
+		<meta http-equiv="refresh" content="0;url=https://reddingwebmaster.com/cart/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://reddingwebmaster.local/cart/";
+			window.location = "https://reddingwebmaster.com/cart/";
 		</script>
 
-		<p>You are being redirected to <a href="https://reddingwebmaster.local/cart/">https://reddingwebmaster.local/cart/</a></p>
+		<p>You are being redirected to <a href="https://reddingwebmaster.com/cart/">https://reddingwebmaster.com/cart/</a></p>
 	</body>
 </html>
